update module:dubbo-common-search-starter add LambdaQuery